tests/test179.rael
log Range
log Range(89)
log Range(5, 12)
log String(60)
